17 Jan 2002 Add PER storage checks for TRAP accesses - Paul Leisy
17 Jan 2002 Fix PER rupt TEA for PC, PR and PT - Paul Leisy
16 Jan 2002 Synchronous I/O fixes - Greg Smith
15 Jan 2002 Add PER checks to MVCL - Paul Leisy
14 Jan 2002 Device subclass priority (try #1) - Greg Smith
14 Jan 2002 Improve cckd initialization time - Greg Smith
11 Jan 2002 Gabor Hoffers performance updates
11 Jan 2002 Fix ifetch performance so it works with PER - Juergen Dobrinski
06 Jan 2002 CMPSC kludge for Cygwin gcc faulty linkage - Greg Smith
05 Jan 2002 Make sure that {fthreads,w32chan}.c go into dist - Matt Zimmerman
02 Jan 2002 Change store of percode in PSA to use realregs->perc - Paul Leisy
02 Jan 2002 Fix stack and BCT per checks - Paul Leisy
02 Jan 2002 Don't set STORE PER when operand specified as REAL - Paul Leisy
30 Dec 2001 Fix for cckd and big-endian - Greg Smith
23 Dec 2001 OPTION_LPP_RESTRICT - Jan Jaeger
23 Dec 2001 Selective ArchMode build options - Jan Jaeger
18 Dec 2001 Make sure PC, PR, PT state switch when pending PER - Paul Leisy
18 Dec 2001 Fix up ILC for PR when PER interrupt - Paul Leisy
18 Dec 2001 Zero STD ID part of PER code for STURA - Paul Leisy
18 Dec 2001 For SSM, LPSW, purge Herc Op cache when PER bit on - Paul Leisy
18 Dec 2001 Move PERAID update to store accesses only - Paul Leisy
18 Dec 2001 Fix trace entry for BSG - Paul Leisy
18 Dec 2001 Add Branch PER check to BCT - Paul Leisy
18 Dec 2001 Add Store PER check to Stack accesses - Paul Leisy
18 Dec 2001 Check odd IA before IFetch PER - Paul Leisy
16 Dec 2001 Do not process PER in native BC mode - Jan Jaeger
16 Dec 2001 Correct PER for S/370 under SIE - Jan Jaeger
16 Dec 2001 Add missing obtain intlock to sie.c - Greg Smith
16 Dec 2001 Add channel set switching feature - Jan Jaeger
16 Dec 2001 Complete MP for S/370 - Jan Jaeger
14 Dec 2001 Fix BSM instruction for z/OS - Greg Smith
12 Dec 2001 Correct SIE intercept with concurrent PER indication - Jan Jaeger
09 Dec 2001 SIE PER enhancements - Jan Jaeger